--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.1.45",
+    "@mdi/js": "^5.1.45",
+    "axios": "^0.19.2",
     "core-js": "^2.6.5",
+    "final-form": "^4.19.1",
+    "moment-jalaali": "^0.9.2",
+    "nano-assign": "^1.0.1",
     "register-service-worker": "^1.6.2",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-moment-jalaali": "^2.0.0",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
+    "vue-swal": "^1.0.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.0.1"
   },
@@ -24,6 +33,9 @@
     "@vue/cli-service": "^3.12.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "tslint": "^6.1.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^3.4.3",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.10",
